try 3rd-party theme

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,6 @@
   </head>
   <body>
     {% include navigation.html %} {{ content }}
+    <!-- use jekyll-include-cache instead -->
   </body>
 </html>
