--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -26,6 +26,11 @@ layout: default
         site.disqus.shortname %} {% include disqus-comments.html %} {% endif %}
         {% include page-pagination.html %}
       </div>
+
+      <a href="#page-title" class="back-to-top"
+        >{{ site.data.text[site.locale].back_to_top | default: 'Back to Top' }}
+        &uarr;</a
+      >
     </div>
   </article>
 </main>
