--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,9 +16,8 @@ hr.hr-dotted {
 .fof {
   display: grid;
   place-items: center;
-  background-color: #f1f1f1;
-  background-image: url("/images/404background.jpg");
   margin: 0;
+  color: #f1f1f1;
 }
 
 @charset "utf-8";
